fixed navigation bar, and buttons alignment

--- a/style.css
+++ b/style.css
@@ -949,23 +949,26 @@ section:nth-child(odd) .animate.scroll,
         opacity: .6;
     }
     .btn-box {
-        flex-direction: column;
+        flex-direction: column; 
+        justify-content: center;
         align-items: center;
+        width: 100%; 
         height: auto;
-        margin-bottom: 2rem; 
+        margin: 2rem 0; 
     }
 
     .btn-box .btn {
-        width: 100%;
+        width: 80%;
         margin: 0.5rem 0;
     }
 
 
     .home-sci {
-        position: relative; 
-        bottom: 0; 
+        position: relative;
+        width: auto; 
+        display: flex;
         justify-content: center; 
-        margin-top: 2rem; 
+        margin: 2rem 0; 
     }
 }
 
